// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ip-geolocation can geolocate ip address from Germany 1`] = `
{
  "city": {
    "name": Any<String>,
  },
  "continent": {
    "code": "EU",
    "name": "Europe",
  },
  "country": {
    "code": "DE",
    "isInEuropeanUnion": true,
    "name": "Germany",
  },
  "location": {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": {
    "name": "Hesse",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from South Africa 1`] = `
{
  "city": {
    "name": Any<String>,
  },
  "continent": {
    "code": "AF",
    "name": "Africa",
  },
  "country": {
    "code": "ZA",
    "isInEuropeanUnion": false,
    "name": "South Africa",
  },
  "location": {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": {
    "name": "Gauteng",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from the UK 1`] = `
{
  "city": {
    "name": Any<String>,
  },
  "continent": {
    "code": "EU",
    "name": "Europe",
  },
  "country": {
    "code": "GB",
    "isInEuropeanUnion": false,
    "name": "United Kingdom",
  },
  "location": {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": {
    "name": "England",
  },
}
`;

exports[`ip-geolocation can geolocate ip address from the USA 1`] = `
{
  "city": {
    "name": Any<String>,
  },
  "continent": {
    "code": "NA",
    "name": "North America",
  },
  "country": {
    "code": "US",
    "isInEuropeanUnion": false,
    "name": "United States",
  },
  "location": {
    "latitude": Any<Number>,
    "longitude": Any<Number>,
  },
  "subdivision": {
    "name": "New Jersey",
  },
}
`;
